update user info function
