# internal/models/domain/update_user.go
@@ -1,0 +1,7 @@
+package domain_model
+
+type UpdateUser struct {
+	Id       string
+	UserName string
+	Password string
+}
